<resources>
    <string name="app_name">Semester06_Project</string>
    <string name="headerTitle">Personal Finance Tracker</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="emailHint">Enter Email Address</string>
    <string name="passwordHint">Enter Password</string>
    <string name="submitLabel">Submit</string>
    <string name="loginHeaderLabel">Please enter your login details</string>
    <string name="loginButtonLabel">Login</string>
    <string name="signUpButtonLabel">Sign Up</string>
    <string name="welcomeLabel">Welcome to Finance Tracker!</string>
    <string name="signUpHeaderLabel">Enter your details to register</string>
    <string name="firstNameHint">Enter First Name</string>
    <string name="surnameHint">Enter Surname</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="registerUserButton">Register</string>
    <string name="menuSignOut">Sign Out</string>
    <string name="menuAddIncome">Add Transaction</string>
    <string name="menuDashboard">Dashboard</string>
    <string name="addIncomeHeader">Add Transaction Details</string>
    <string name="addIncomeTitleHint">Enter title</string>
    <string name="addIncomeAmountHint">Enter amount</string>
    <string name="incomeRadio">Income</string>
    <string name="expenditureRadio">Expenditure</string>
    <string name="noDataFoundText">There has been no transaction data found. Please add a transaction to see it show up here.</string>
    <string name="dashboardShowList">Show Transactions</string>
    <string name="showAllRadio">All</string>
    <string name="showIncomeRadio">Income</string>
    <string name="showExpenditureRadio">Expenditure</string>
    <string name="dashboardHideList">Hide Transactions</string>
    <string name="dashboardContextEdit">Edit Transaction</string>
    <string name="dashboardContextDelete">Delete Transaction</string>
    <string name="totalIncomeLabel">Total Income</string>
    <string name="totalExpenditureLabel">Total Expenditure:</string>
    <string name="currentBalanceLabel">Current Balance:</string>
    <string name="emptyBalance">€0.00</string>
    <string name="greeting"><b>Welcome</b>, <i>%s</i></string>
    <string name="showTotals">Show Totals</string>
    <string name="hideTotals">Hide Totals</string>
    <string name="transactionDueDate">%1$s due on %2$s</string>
    <string name="changeDueDateButton">Select Due Date</string>
    <string name="title_activity_transaction_list">TransactionListActivity</string>
    <string name="showPendingRadio">Pending</string>
    <string name="showCompletedRadio">Completed</string>
    <string name="transactionListMenu">Transaction List</string>
    <string name="transactionRowDueLabel">Due on %s</string>
    <string name="transactionRowEnteredLabel">Entered on %s</string>
    <string name="transactionAmountLabel">Amount €%s</string>
    <string name="pendingIncomeLabel">Pending Income</string>
    <string name="pendingExpenditureLabel">Pending Expenditure</string>
    <string name="pendingBalanceLabel">Pending Balance:</string>
    <string name="completedIncomeLabel">Completed Income:</string>
    <string name="completedExpenditureLabel">Completed Expenditure:</string>
    <string name="completedBalanceLabel">Completed Balance:</string>
    <string name="completedTotals">Completed Totals</string>
    <string name="pendingTotals">Pending Totals</string>
    <string name="currentTotals">Current Totals</string>
    <string name="sortDueLabel">Due Date</string>
    <string name="sortEnteredLabel">Entered</string>
    <string name="sortAscending">Lowest to Highest</string>
    <string name="sortDescending">Highest to Lowest</string>
    <string name="sortAmount">Amount</string>
    <string name="sortTitle">Title</string>
    <string name="earlierLabel">Oldest First</string>
    <string name="laterLabel">Newest First</string>
    <string name="forwardsAlpha">A-Z</string>
    <string name="backwardsAlpha">Z-A</string>
    <string name="euro_symbol">Euro Symbol</string>
</resources>
