<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_income"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ie.wit.application.activities.AddTransactionActivity"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingBottom="0dp"
        android:paddingTop="0dp">

        <TextView
            android:id="@+id/addIncomeHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/headerBottomMargin"
            android:gravity="center"
            android:text="@string/addIncomeHeader"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <RadioGroup
            android:id="@+id/transactionType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/isIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/incomeRadio"/>

            <RadioButton
                android:id="@+id/isExpenditure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/expenditureRadio"/>
        </RadioGroup>

        <EditText
            android:id="@+id/addIncomeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/addIncomeTitleHint"
            android:inputType="textAutoComplete"/>

        <EditText
            android:id="@+id/addIncomeAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/addIncomeAmountHint"
            android:inputType="numberDecimal"/>

        <TextView
            android:id="@+id/dueDateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="TextView"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/loginButtonColor"
            android:onClick="showDatePicker"
            android:text="@string/changeDueDateButton"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/signinButtonColor"
            android:onClick="submitTransaction"
            android:text="@string/submitLabel"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</RelativeLayout>
