<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ie.wit.application.activities.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeLabel"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:id="@+id/textView"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:weightSum="1"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="257dp"
            android:layout_height="268dp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="false"
            android:contentDescription="@string/euro_symbol"
            app:srcCompat="@drawable/money_briefcase"/>

        <ProgressBar
            android:id="@+id/mainCheckAuthLoading"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.13"/>

        <Button
            android:id="@+id/openApplication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/loginButtonColor"
            android:onClick="loginClicked"
            android:text="@string/loginButtonLabel"
            android:textColor="@color/fontColor01"/>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/signinButtonColor"
            android:onClick="signUpClicked"
            android:text="@string/signUpButtonLabel"
            android:textColor="@color/fontColor01"/>

    </LinearLayout>

</RelativeLayout>
