<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ie.wit.application.activities.DashboardActivity">

    <TextView
        android:id="@+id/userNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/dashboardCurrentBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_below="@id/userNameLabel"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"
        android:gravity="top|center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:visibility="visible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/toggleShowList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/loginButtonColor"
            android:onClick="toggleList"
            android:text="@string/dashboardHideList"
            android:visibility="visible"/>

        <RadioGroup
            android:id="@+id/toggleDataRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/showAllRadioButton"
            android:orientation="horizontal"
            android:visibility="visible">

            <RadioButton
                android:id="@+id/showAllRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/showAllRadio"/>

            <RadioButton
                android:id="@+id/showExpenditureRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/showExpenditureRadio"/>

            <RadioButton
                android:id="@+id/showIncomeRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/showIncomeRadio"/>

        </RadioGroup>

        <ListView
            android:id="@+id/transactionList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

        </ListView>

    </LinearLayout>

    <TextView
        android:id="@+id/noDataFoundLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="top|center"
        android:text="@string/noDataFoundText"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:visibility="visible"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
